# meatycapture

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEBASE_MAP.md  Dockerfile  Dockerfile.web  EXPLORATION_INDEX.md  README.md  TAURI_SETUP.md  build-cli.js  docker-compose.override.example.yml  docker-compose.yml  docker-start.sh  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.cli.json  tsconfig.json  verify-logging.js  verify-tauri-setup.js  vite.config.ts  vitest.config.ts
.claude/design-system/: icon-integration.md
.claude/progress/: bug-fixes-2025-12.md
.claude/prompt-blocks/: debug-stub.md  tracking-created.md
.claude/worknotes/: docker-compose-setup.md  task-4.2-4.4-performance-verification.md  task-5.2-implementation-summary.md
docs/: accessibility-audit-report.md  accessibility-fixes-summary.md  cli-implementation.md
docs/cli/: agent-integration.md  examples.md  exit-codes.md  index.md  log-commands.md  workflows.md
docs/deployment/: server-mode.md
docs/ops/: logging-and-backup.md
docs/performance/: viewer-benchmarks.md
examples/: backup-demo.ts
src/: App.tsx  index.css  tauri.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/adapters/: factory.ts
src/cli/: env-loader.ts  index.ts  logging-stub.ts
src/core/: test-helpers.ts
src/platform/: api-detection.ts  index.ts
src/server/: README.md  index.ts
src/test/: setup.ts
src/types/: bun.d.ts  (+1 more)
(+215 files in other folders)
